--- a/Assignment2/Base.lproj/Main.storyboard
+++ b/Assignment2/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="S2F-Uc-QC6" kind="show" id="igi-8b-NWf"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -53,6 +56,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZX-XN-2u0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="372" y="11"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="4rw-Q5-Wf8">
+            <objects>
+                <viewController id="S2F-Uc-QC6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BWI-3E-qE5"/>
+                        <viewControllerLayoutGuide type="bottom" id="MfI-e7-xyG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tSk-7J-fce">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HpJ-IX-ALt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1183" y="20"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="D95-Q1-Zrl">
