--- a/Assignment2/Base.lproj/Main.storyboard
+++ b/Assignment2/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="S2F-Uc-QC6" kind="show" id="igi-8b-NWf"/>
+                                    <segue destination="S2F-Uc-QC6" kind="show" identifier="showSneakerDetail" id="igi-8b-NWf"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -57,10 +57,10 @@
             </objects>
             <point key="canvasLocation" x="372" y="11"/>
         </scene>
-        <!--View Controller-->
+        <!--Sneaker Detail View Controller-->
         <scene sceneID="4rw-Q5-Wf8">
             <objects>
-                <viewController id="S2F-Uc-QC6" sceneMemberID="viewController">
+                <viewController id="S2F-Uc-QC6" customClass="SneakerDetailViewController" customModule="Assignment2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BWI-3E-qE5"/>
                         <viewControllerLayoutGuide type="bottom" id="MfI-e7-xyG"/>
@@ -68,12 +68,32 @@
                     <view key="view" contentMode="scaleToFill" id="tSk-7J-fce">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swv-XX-WR4" userLabel="sneakerName">
+                                <rect key="frame" x="100" y="64" width="159" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtb-KV-c4B" userLabel="price">
+                                <rect key="frame" x="156" y="141" width="93" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="priceLabel" destination="dtb-KV-c4B" id="jIf-eT-J2l"/>
+                        <outlet property="sneakerNameLabel" destination="swv-XX-WR4" id="uq4-PB-822"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HpJ-IX-ALt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1183" y="20"/>
+            <point key="canvasLocation" x="1181.5999999999999" y="19.340329835082461"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="D95-Q1-Zrl">
