--- a/Assignment2/Base.lproj/Main.storyboard
+++ b/Assignment2/Base.lproj/Main.storyboard
@@ -17,9 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="sectionIndexBackgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="e9A-R5-3bW">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReleaseTableCell" textLabel="OfQ-or-Zhf" detailTextLabel="r2X-dk-Xgw" style="IBUITableViewCellStyleSubtitle" id="EWC-Ii-wOe">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EWC-Ii-wOe" id="Qw7-nV-XbO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -52,6 +58,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="Clf-RT-cWC"/>
+                    <connections>
+                        <outlet property="searchBar" destination="e9A-R5-3bW" id="AzY-Y9-FTE"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZX-XN-2u0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
